[package]
name = "qr_code_creator"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui-macroquad = "0.12.0"
macroquad = "0.3.25"
qrcode-generator = "4.1.7"
image = { version = "0.24.5", default-features = false, features = ["jpeg", "png"] }
egui_extras = { version = "0.19.0", features = ["image"] }